<resources>
    <string name="app_name">Desafío 1 DSM</string>
    <!-- Calculo de salario -->
    <string name="calcSalTitulo">Descuentos de salario</string>
    <string name="calcSalInNombre">Nombre:</string>
    <string name="calcSalPlaceholderNombre">Ingresa tu nombre...</string>
    <string name="calcSalInSalBase">Salario base:</string>
    <string name="calcSalPlaceholderSalBase">Ingresa tu salario base...</string>
    <string name="calcSalRenta">Descuento de renta:</string>
    <string name="calcSalAFP">Descuento de AFP:</string>
    <string name="calcSalISSS">Descuento de ISSS:</string>
    <string name="calcSalNeto">Salario neto:</string>
    <string name="calcSalVacio">...</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <!-- Calculo de promedio -->
    <string name="calcPromTitulo">Promedio de notas</string>
    <string name="calcPromInNombre">Nombre:</string>
    <string name="calcPromPlaceholderNombre">Ingresa tu nombre...</string>
    <string name="calcPromLbNota1">Nota 1 (15%):</string>
    <string name="calcPromPhNota1">Ingresa tu nota...</string>
    <string name="calcPromLbNota2">Nota 2 (15%):</string>
    <string name="calcPromPhNota2">Ingresa tu nota...</string>
    <string name="calcPromLbNota3">Nota 3 (20%):</string>
    <string name="calcPromPhNota3">Ingresa tu nota...</string>
    <string name="calcPromLbNota4">Nota 4 (25%):</string>
    <string name="calcPromPhNota4">Ingresa tu nota...</string>
    <string name="calcPromLbNota5">Nota 5 (25%):</string>
    <string name="calcPromPhNota5">Ingresa tu nota...</string>
    <string name="calcPromLbPromedio">Promedio:</string>
    <string name="calcPromLbNotaFinal">Nota final:</string>
    <string name="calcPromLbEstadoAprobacion">Aprobó:</string>
    <string name="calcPromVacio">...</string>
</resources>